--- a/package.json
+++ b/package.json
@@ -2,10 +2,15 @@
     "name": "video-dogger",
     "description": "Video Dogger",
     "version": "0.0.1",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/seandevs/goDog.git"
+    }
     "dependencies": {
         "express": "3.x",
         "mongodb": "1.1.8",
-        "socket.io": "0.9.10"
+        "socket.io": "0.9.10",
+        "backbone": "1.1.0"
     },
     "engines": {
         "node": "latest",
