--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "video-dogger",
+    "name": "goDog",
     "description": "Video Dogger",
     "version": "0.0.1",
     "repository": {
